ERILON-4 Поправить отображение вероятностей выпадения врожденки на странице Врожденных особенностей
ERILON-7 Добавить во врожденки возможность задавать/роллить числовое значение

--- a/public/views/create_personage.html
+++ b/public/views/create_personage.html
@@ -199,8 +199,9 @@
                                                     </td>
 
                                                     <td style="vertical-align:middle;">
-                                                        <div ng-if="!personageInherent.value != 0">
-                                                            {{personageInherent.Inherent.value}}
+                                                        <div ng-if="personageInherent.Inherent.min_limit && personageInherent.Inherent.max_limit">
+                                                            <input type="number" ng-model="personageInherent.value"
+                                                                   id="inherent_value">
                                                         </div>
                                                     </td>
 
