--- a/public/views/race_manager.html
+++ b/public/views/race_manager.html
@@ -30,24 +30,30 @@
 
 <div class="container">
     <h2>Добавить расу</h2>
+
     <form class="form-horizontal" role="form" ng-controller="addRaceController"
           name="createRaceForm">
         <div class="form-group">
             <label class="control-label col-sm-2" for="race_name">Название расы:</label>
+
             <div class="col-sm-10">
-                <input type="text" ng-model="race_name" class="form-control" id="race_name" placeholder="Человек" required>
+                <input type="text" ng-model="race_name" class="form-control" id="race_name" placeholder="Человек"
+                       required>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="max_age">Максимальный возраст:</label>
+
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="max_age" placeholder="150" ng-model="max_age" min="0" required>
+                <input type="number" class="form-control" id="max_age" placeholder="150" ng-model="max_age" min="0"
+                       required>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-click="createRace()"
-                        ng-disabled="createRaceForm.$invalid">Добавить</button>
+                        ng-disabled="createRaceForm.$invalid">Добавить
+                </button>
             </div>
         </div>
     </form>
@@ -58,9 +64,23 @@
 
     app.controller("addRaceController", function ($scope, $http) {
         $scope.createRace = function () {
-            $http.post('/races', {name: $scope.race_name, max_age: $scope.max_age}).
-            success(function (data) {
-                location.reload();
+            $http.post('/races', {
+                name: $scope.race_name,
+                max_age: $scope.max_age
+            }).
+            success(function (result) {
+                $http.get('/attributes').
+                success(function (results) {
+                    angular.forEach(results.attributes, function (attribute) {
+                        $http.post('/raceAttributes', {
+                            race_id: result.race.id,
+                            attribute_id: attribute.id,
+                            base_cost: 5,
+                            max_value: 12
+                        });
+                    });
+                    location.reload();
+                });
             });
         };
     });
