possibility to delete raceAttr

--- a/public/views/attribute_manager.html
+++ b/public/views/attribute_manager.html
@@ -53,9 +53,23 @@
 
     app.controller("addAttributeController", function ($scope, $http) {
         $scope.createAttribute = function () {
-            $http.post('/attributes', {name: $scope.attribute_name, action_level_bonus: $scope.action_level_bonus}).
-            success(function (data) {
-                location.reload();
+            $http.post('/attributes', {
+                name: $scope.attribute_name,
+                action_level_bonus: $scope.action_level_bonus
+            }).
+            success(function (result) {
+                $http.get('/races').success(function (results){
+                    angular.forEach(results.races, function(race) {
+                        $http.post('/raceAttributes', {
+                            race_id: race.id,
+                            attribute_id: result.attribute.id,
+                            base_cost: 5,
+                            max_value: 12
+                        });
+                    });
+                    location.reload();
+                });
+
             });
         };
     });
